# GeoCalculator

./: Answers.md  CMakeLists.txt  README.md  geocalculator.drawio
.github/workflows/: cmake.yml
libraries/: CMakeLists.txt
libraries/shapes/: CMakeLists.txt
libraries/shapes/src/: crown.cpp  crown.hpp  disc.cpp  disc.hpp  rectangle.cpp  rectangle.hpp  shape.cpp  shape.hpp  shapeFactory.cpp  shapeFactory.hpp  triangle.cpp  triangle.hpp
libraries/shapes/tests/: disc_test.cpp  rectangle_test.cpp  square_test.cpp  triangle_test.cpp
src/: CMakeLists.txt  main.cpp
